# slavic_castles

./: .build.yml  .gitignore  CNAME  Cargo.toml  LICENSE  README.md  build.rs  index.html  justfile  manifest.json  slavic_castles.d.ts  slavic_castles.js  slavic_castles_bg.wasm.d.ts
.github/workflows/: release.yml  rust.yml
assets/: all.deck.json  enemy.names.json
assets/css/: base.css
assets/fonts/: AlteHaasGrotesk licence
crates/game_core/: Cargo.toml
crates/game_core/src/: consts.rs  lib.rs
crates/game_core/src/data/: card.rs  mod.rs  player.rs  resource.rs  supply.rs
crates/utils_svg_cards_gen/: Cargo.toml
crates/utils_svg_cards_gen/src/: main.rs
resources/: deck.json
src/: board.rs  card.rs  card_effect.rs  card_sounds.rs  consts.rs  deck.rs  main.rs  my_game.rs  player.rs  resource.rs  stats.rs
src/base_systems/: buttons.rs  debug.rs  mod.rs  turn_based.rs
src/components/: card_display.rs  mod.rs  player_ui.rs
src/data/: card.rs  consts.rs  deck.rs  mod.rs  player.rs  player_resources.rs  profile.rs  resource.rs
src/helpers/: button.rs  mod.rs  wasm_resize.rs
src/states/: consts.rs  game.rs  game_states.rs  loading.rs  menu.rs  mod.rs  profile_selection.rs
src/ui/: animations.rs  board_ui.rs  button.rs  card_displayer.rs  console.rs  game_ended_text.rs  game_info.rs  help_displayer.rs  mod.rs  player_info.rs  resource_info.rs  start_game_screen.rs  waste_cards.rs
src/visual/: animation_interface.rs  mod.rs
static/: deck.json  index.html  manifest.json
wasm/: index.html
