[package]
name = "slavic_castles"
repository = "https://github.com/Leinnan/slavic_castles"
homepage = "https://github.com/Leinnan/slavic_castles"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[dependencies]
console_error_panic_hook = "0.1"
bevy = {version = "0.13", features = [
  "bevy_asset",
  "bevy_audio",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "vorbis",
  "wayland",
  "webgl2",
]}
inline_tweak = "1"
bevy_tweening = "0.10"
serde = "1"
serde_json = "1"
bevy_pkv = "0.10"
rand = "0.8"
bevy_asset_loader = "0.20"
webbrowser = "1"
bevy_button_released_plugin = "0.5.1"
bevy_ecss = {git = "https://github.com/afonsolage/bevy_ecss.git", rev = "ea1ef7bd5eab5fff289c7426018ecc8ab5669823"}
bevy_common_assets = { version = "0.10", features = ["json"] }
bevy_simple_text_input = "0.6"
bevy_mod_picking = "0.18.2"
bevy_wasm_window_resize = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_egui = "0.27"
bevy-inspector-egui = "0.24"
iyes_perf_ui = "0.2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
usvg = "0.41"
tiny-skia = "0.11.4"
rayon = "1.10"
resvg = "0.41"
glob = "0.3"
