[package]
name = "slavic_castles"
repository = "https://github.com/Leinnan/slavic_castles"
homepage = "https://github.com/Leinnan/slavic_castles"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
bevy = {version = "0.16"}
serde = { version =  "1", features = ["derive"] }
serde_json = "1"

[dependencies]
game_core = {path = "crates/game_core", features = ["bevy"]}
console_error_panic_hook = "0.1"
bevy = {workspace = true, default-features = true, features = ["configurable_error_handler"]}
serde = {workspace = true}
serde_json = {workspace = true}
inline_tweak = "1"
bevy_tweening = "0.13"
bevy_pkv = "0.13"
rand = "0.8"
bevy_asset_loader = "0.23.0-rc.3"
webbrowser = "1"
bevy_common_assets = { version = "0.13", features = ["json"] }
bevy_simple_text_input = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy-inspector-egui = "0.31"
#iyes_perf_ui = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
default-features = false
features = ["Window"]

[build-dependencies]
game_core = {path = "crates/game_core"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
usvg = "0.41"
tiny-skia = "0.11.4"
rayon = "1.10"
resvg = "0.41"
glob = "0.3"
