[package]
name = "utils_svg_cards_gen"
repository = "https://github.com/Leinnan/slavic_castles"
homepage = "https://github.com/Leinnan/slavic_castles"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {workspace = true, default-features = true, optional = true}
serde = {workspace = true}
serde_json = {workspace = true}
game_core = {path = "../game_core"}
usvg = "0.41"
tiny-skia = "0.11.4"
rayon = "1.10"
resvg = "0.41"
glob = "0.3"
